--- a/myapp/templates/myapp/post_detail.html
+++ b/myapp/templates/myapp/post_detail.html
@@ -1,3 +1,11 @@
+<p>Category: {{ post.category.name }}</p>
+<p>Tags: 
+    {% for tag in post.tags.all %}
+        <a href="{% url 'tagged_posts' tag.slug %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+    {% endfor %}
+</p>
+
+
 <h3>Comments</h3>
 {% for comment in comments %}
     <div>
